--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,9 @@ Title: Adds some features to RPostgreSQL
 Version: 0.0.2
 Authors@R: person("Giuseppe", "Acito", email = "giuseppe.acito@gmail.com", role = c("aut", "cre"))
 Description: It just adds PreparedStatements to RPostgreSQL original package
-Depends: R (>= 3.2.1)   
+Depends:
+   R (>= 3.0.0),
+   methods,
+   RPostgreSQL
 License: What MIT + file LICENSE
 LazyData: true
